@@ -76,4 +76,3 @@ if(check_FOUND)
 else(check_FOUND)
 	MESSAGE(WARNING "check not found! no test!")
 endif(check_FOUND)
-
